added initial map

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <title>vibes</title>
 <link rel="stylesheet" href="styles.css" />
+<!-- MapLibre CSS -->
+<link href="https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.css" rel="stylesheet" />
 </head>
 <body>
 	
+<div id="map"></div>
 	
-	
+<!-- MapLibre JS -->
+<script src="https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
