add markers + popup

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <body>
 	
 <div id="map"></div>
+
+<div class="add">
+	<input type="text" placeholder="Search for a place" />
+</div>
 	
 <!-- MapLibre JS -->
 <script src="https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.js"></script>
